[package]
name = "raydium-cp-swap-token-22"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap_token_22"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
enable-log = []
client = []
devnet = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["memo", "metadata"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.10.0"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.0"